--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "country-state-city": "^3.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-text-truncate": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
