--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.9.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-text-truncate": "^0.19.0",
